syntax = "proto3";

package sfc_invite;

import "Models/Invite/Data/data_value.proto";

option csharp_namespace = "SFC.Invite.Contracts.Messages.Invite.Data.GetAll";

message GetAllInviteDataResponse
{   
    repeated DataValue invite_statuses = 1;    
}