syntax = "proto3";

package sfc_invite;

import "Messages/Invite/Data/GetAll/get_all_invite_data_request.proto";
import "Messages/Invite/Data/GetAll/get_all_invite_data_response.proto";

option csharp_namespace = "SFC.Invite.Contracts.Services";

service InviteDataService {
    rpc GetAll (GetAllInviteDataRequest) returns (GetAllInviteDataResponse);
}